# JW-viewfinder

./: README.md  angular.json  package.json  pnpm-lock.yaml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/book_management/: add_selection_handle.rs  extract_cover.rs  extract_nav_page.rs  file_decompression.rs
src-tauri/src/path_management/: get_assets_path.rs
src-tauri/src/server/: files_server.rs
src-tauri/src/utilities_commands/: tauri_utilities.rs
src-tauri/src/windows/: viewfinder_book.rs
src/app/: app.component.ts  app.routes.ts  get-epub-text.service.spec.ts
src/app/models/: book.ts
src/app/services/: get-epub-text.service.ts
src/app/upload-books/: upload-books.component.css  upload-books.component.html  upload-books.component.spec.ts  upload-books.component.ts
src/app/viewfinder-book/: viewfinder-book.component.css  viewfinder-book.component.html  viewfinder-book.component.spec.ts  viewfinder-book.component.ts
src/app/viewfinder-window/: viewfinder-window.component.css  viewfinder-window.component.html  viewfinder-window.component.spec.ts  viewfinder-window.component.ts
