[package]
name = "jw-viewfinder"
version = "0.0.0"
description = "A Tauri App"
authors = ["David Enrique Olivero De La Hoz"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "path-all", "fs-all", "window-all", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
rocket = { version = "0.5.1", features = ["secrets"] }
serde_json = "1"
zip = "2.1.3"
epub = "2.1.2"
dirs = "5.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
